WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170159
[WK2] UIKit assertion when rotating device after dismissing popover
https://bugs.webkit.org/show_bug.cgi?id=170159
Summary
[WK2] UIKit assertion when rotating device after dismissing popover
Wenson Hsieh
Reported
2017-03-27 19:41:07 PDT
Last Exception Backtrace: 0 CoreFoundation 0x186099ea4 __exceptionPreprocess + 228 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/ObjC.subproj/NSException.m:166) 1 libobjc.A.dylib 0x1a77582fc objc_exception_throw + 56 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/objc4/objc4-713/runtime/objc-exception.mm:521) 2 CoreFoundation 0x186099d10 +[NSException raise:format:arguments:] + 104 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/ObjC.subproj/NSException.m:132) 3 Foundation 0x187a395b8 -[NSAssertionHandler handleFailureInMethod:object:file:lineNumber:description:] + 112 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation-1423/ObjC.subproj/NSException.m:157) 4 UIKit 0x18d0afc6c +[UIViewController _viewControllerForFullScreenPresentationFromView:] + 748 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIViewController.m:7822) 5 WebKit 0x18e4da76c -[WKActionSheet willRotate] + 72 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/WebKit2/WebKit2-7604.1.14/UIProcess/ios/WKActionSheet.mm:152) 6 CoreFoundation 0x18602ba5c __CFNOTIFICATIONCENTER_IS_CALLING_OUT_TO_AN_OBSERVER__ + 20 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/AppServices.subproj/CFNotificationCenter.c:656) 7 CoreFoundation 0x18602aff4 _CFXRegistrationPost + 416 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/AppServices.subproj/CFNotificationCenter.c:162) 8 CoreFoundation 0x18602ad5c ___CFXNotificationPost_block_invoke + 60 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/AppServices.subproj/CFNotificationCenter.c:1054) 9 CoreFoundation 0x1860a94ac -[_CFXNotificationRegistrar find:object:observer:enumerator:] + 1316 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/AppServices.subproj/CFXNotificationRegistrar.m:163) 10 CoreFoundation 0x185f6007c _CFXNotificationPost + 376 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/AppServices.subproj/CFNotificationCenter.c:1051) 11 Foundation 0x187993448 -[NSNotificationCenter postNotificationName:object:userInfo:] + 68 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation-1423/Misc.subproj/NSNotification.m:509) 12 UIKit 0x18d14faa0 __59-[UIWindow _rotateToBounds:withAnimator:transitionContext:]_block_invoke + 384 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIWindow.m:2801) 13 UIKit 0x18ceb1af4 +[UIView(Animation) performWithoutAnimation:] + 104 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIView.m:12181) 14 UIKit 0x18d14f800 -[UIWindow _rotateToBounds:withAnimator:transitionContext:] + 420 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIWindow.m:2811) 15 UIKit 0x18d151060 -[UIWindow _rotateWindowToOrientation:updateStatusBar:duration:skipCallbacks:] + 1228 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIWindow.m:3412) 16 UIKit 0x18cf1e768 -[UIWindow _setRotatableClient:toOrientation:updateStatusBar:duration:force:isRotating:] + 544 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIWindow.m:3455) 17 UIKit 0x18cf1e3ec -[UIWindow _setRotatableViewOrientation:updateStatusBar:duration:force:] + 148 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIWindow.m:3282) 18 UIKit 0x18cf1503c __57-[UIWindow _updateToInterfaceOrientation:duration:force:]_block_invoke + 124 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIWindow.m:2956) 19 UIKit 0x18cea4c34 -[UIWindow _updateToInterfaceOrientation:duration:force:] + 480 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIWindow.m:2992) 20 UIKit 0x18d5e4a5c -[_UICanvasMetricsCalculator updateMetricsOnWindows:animated:] + 864 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/_UICanvas.m:49) 21 UIKit 0x18d5e88d0 -[_UICanvas _computeMetrics:] + 152 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/_UICanvas.m:689) 22 UIKit 0x18ceb1af4 +[UIView(Animation) performWithoutAnimation:] + 104 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIView.m:12181) 23 UIKit 0x18d5e76c8 -[_UICanvas _performActions:withOverrideSettings:] + 184 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/_UICanvas.m:528) 24 UIKit 0x18d10eb38 -[UIApplication _createSnapshotContextForScene:withName:performLayoutWithSettings:] + 428 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:6566) 25 UIKit 0x18d110294 __65-[UIApplication _performSnapshotsWithAction:forScene:completion:]_block_invoke_2 + 124 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:6713) 26 FrontBoardServices 0x194d89a8c -[FBSSceneSnapshotAction _executeNextRequest] + 240 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/FrontBoardServices/FrontBoard-450/FrontBoardServices/FBSSceneSnapshotAction.m:146) 27 FrontBoardServices 0x194d896ac -[FBSSceneSnapshotAction executeRequestsWithHandler:completionHandler:expirationHandler:] + 228 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/FrontBoardServices/FrontBoard-450/FrontBoardServices/FBSSceneSnapshotAction.m:96) 28 UIKit 0x18d1101b4 __65-[UIApplication _performSnapshotsWithAction:forScene:completion:]_block_invoke + 292 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:6711) 29 UIKit 0x18d10f734 -[UIApplication _beginSnapshotSessionForScene:withSnapshotBlock:] + 780 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:6656) 30 UIKit 0x18d10fee4 -[UIApplication _performSnapshotsWithAction:forScene:completion:] + 216 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:6709) 31 UIKit 0x18d10fd90 -[UIApplication _handleSnapshotAction:forScene:completion:] + 156 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:6693) 32 UIKit 0x18d10b770 __71-[UIApplication _handleSnapshotAction:forScene:deactivationCompletion:]_block_invoke + 264 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:5967) 33 UIKit 0x18d10b5c8 -[UIApplication _handleSnapshotAction:forScene:deactivationCompletion:] + 356 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:5981) 34 UIKit 0x18d3513ec __98-[__UICanvasLifecycleMonitor_Compatability deactivateEventsOnly:withContext:forceExit:completion:]_block_invoke.221 + 728 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/_UICanvasLifecycleMonitor.m:426) 35 UIKit 0x18d10f198 _runAfterCACommitDeferredBlocks + 292 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:2400) 36 UIKit 0x18d102e4c _cleanUpAfterCAFlushAndRunDeferredBlocks + 288 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:2378) 37 UIKit 0x18ce96178 _afterCACommitHandler + 132 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:2430) 38 CoreFoundation 0x18604513c __CFRUNLOOP_IS_CALLING_OUT_TO_AN_OBSERVER_CALLBACK_FUNCTION__ + 32 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/RunLoop.subproj/CFRunLoop.c:1827) 39 CoreFoundation 0x186042adc __CFRunLoopDoObservers + 412 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/RunLoop.subproj/CFRunLoop.c:1923) 40 CoreFoundation 0x186042fc4 __CFRunLoopRun + 1080 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/RunLoop.subproj/CFRunLoop.c:2878) 41 CoreFoundation 0x185f5d9a4 CFRunLoopRunSpecific + 548 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/CF/CF-1423/RunLoop.subproj/CFRunLoop.c:3154) 42 GraphicsServices 0x19635a1ac GSEventRunModal + 100 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/GraphicsServices/GraphicsServices-633/GSEvent.c:2245) 43 UIKit 0x18cf062f8 UIApplicationMain + 208 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/UIKit/UIKit-3662.2/UIApplication.m:3826) 44 MobileSafari 0x103cf3600 main + 2060 (/BuildRoot/Library/Caches/com.apple.xbs/Sources/MobileSafari/MobileSafari-2496/main.m:170) 45 libdyld.dylib 0x1a84c8f00 start + 4
Attachments
Patch
(2.49 KB, patch)
2017-03-27 19:52 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-03-27 19:43:54 PDT
<
rdar://problem/31283829
>
Wenson Hsieh
Comment 2
2017-03-27 19:52:56 PDT
Created
attachment 305544
[details]
Patch
Wenson Hsieh
Comment 3
2017-03-27 20:08:33 PDT
Committed <trac.webkit.org/changeset/214455>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug