[WK2] UIKit assertion when rotating device after dismissing popover https://bugs.webkit.org/show_bug.cgi?id=170159 <rdar://problem/31283829>

Reviewed by Tim Horton.

Ensure that when we are finished presenting a WKActionSheet, we unregister with the shared notifications center.

* UIProcess/ios/WKActionSheet.mm:
(-[WKActionSheet dealloc]):
(-[WKActionSheet _cleanup]):
(-[WKActionSheet doneWithSheet:]):

Canonical link: https://commits.webkit.org/187080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214455 268f45cc-cd09-0410-ab3c-d52691b4dbfc